# aws-weekly-news-mcp

./: .gitignore  README.md  models.py  pyproject.toml  requirements.txt  server.py  util.py
tests/: test_models.py  test_server.py  test_util.py
