[project]
name = "mcp-awsnews-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "loguru>=0.7.3",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.4",
    "markdownify>=0.11.6",
    "readabilipy>=0.2.0",
    "ruff>=0.11.6",
    "python-dateutil>=2.9.0.post0",
    "pytest>=8.3.5",
    "pytest-mock>=3.12.0",     # モック用
    "pytest-asyncio>=0.23.0",  # 非同期テスト用 (server.py のテストで必要になる可能性)
    "requests-mock>=1.11.0",   # requests のモック用
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "D400",  # first line should be in imperative mood
    "D415",  # missing docstring in magic method
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
    "DTZ007", # timezone-naive datetime created
    "BLE001", # black formatting
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6
